feat: GeminiApiResponse를 통해 구조화된 응답 파싱 기능 추가